--- a/conf/conf.yaml
+++ b/conf/conf.yaml
@@ -28,3 +28,9 @@ server:
   dp_root_dir: C:\GoProject\fintech_practices\files\dp
   resource_root_dir: C:\GoProject\fintech_practices\files\resource
   cover_image_root_dir: C:\GoProject\fintech_practices\files\cover_image
+
+model:
+  image:
+    exec_cmd: 'python inference.py --driven_audio {{.AudioInput}}  --source_image {{.ImageInput}} --result_dir {{.OutPutDir}} --file_name {{.FileName}} --enhancer gfpgan'
+    before_start: 'activate'
+    after_end: 'deactivate'
