--- a/conf/conf.yaml
+++ b/conf/conf.yaml
@@ -32,7 +32,7 @@ server:
 
 model:
   dp:
-    exec_cmd: 'python C:\Users\Administrator\Desktop\CC\12-8_clone\fintech_practices\pkg\SadTalker-main\inference.py --driven_audio {{.AudioInput}}  --source_image {{.ImageInput}} --result_dir {{.OutPutDir}} --file_name {{.FileName}} --enhancer gfpgan'
+    exec_cmd: 'python C:\Users\Administrator\Desktop\CC\12-8_clone\fintech_practices\pkg\SadTalker-main\inference.py --driven_audio {{.AudioInput}} --source_image {{.ImageInput}} --result_dir {{.OutputDir}} --file_name {{.FileName}} --enhancer gfpgan'
     before_start: ''
     after_end: ''
   audio:
